--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,17 @@
 :root {
   --background: #ffffff;
   --foreground: #0b0b0b;
+  --primary-gray: #eeeeee;
+  --content-inverse-primary: #fffffc;
+  --content-inverse-secondary: #bfbdb6;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary-gray: var(--primary-gray);
+  --color-inverse-primary: var(--content-inverse-primary);
+  --color-inverse-secondary: var(--content-inverse-secondary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
